--- a/public/ds-book-r/p02-01-gioi-thieu-co-ban-ve-r.html
+++ b/public/ds-book-r/p02-01-gioi-thieu-co-ban-ve-r.html
@@ -718,14 +718,17 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </center>
 <p><strong>Cách cài đặt R &amp; Rstudio</strong>:</p>
 <ul>
-<li><p>Cài đặt R-base: <a href="https://cran.r-project.org/bin/windows/base/">https://cran.r-project.org/bin/windows/base/</a></p></li>
-<li><p>Cài đặt R-studio: <a href="https://www.rstudio.com/products/rstudio/download/">https://www.rstudio.com/products/rstudio/download/</a></p></li>
-<li><p>Giới thiệu về giao diện R Studio:</p>
+<li>Cài đặt R-base: <a href="https://cran.r-project.org/bin/windows/base/">https://cran.r-project.org/bin/windows/base/</a></li>
+<li>Cài đặt R-studio: <a href="https://www.rstudio.com/products/rstudio/download/">https://www.rstudio.com/products/rstudio/download/</a></li>
+</ul>
+<hr>
 <ul>
-<li>Script: Xem, chỉnh sửa và thực hiện các dòng lệnh trong R</li>
-<li>Console: Hiển thị kết quả của câu lệnh từ script hoặc cho phép nhập lệnh và trả kết quả như R-base</li>
-<li>Environment &amp; History: Xem lịch sử và các đối tượng (oject) trong R</li>
-<li>Plot, packges &amp; Help: Xem kết quả plot, packages và help trong R</li>
+<li>Giới thiệu về giao diện R Studio:
+<ul>
+<li><code>Script</code>: Xem, chỉnh sửa và thực hiện các dòng lệnh trong R</li>
+<li><code>Console</code>: Hiển thị kết quả của câu lệnh từ script hoặc cho phép nhập lệnh và trả kết quả như R-base</li>
+<li><code>Environment &amp; History</code>: Xem lịch sử và các đối tượng (oject) trong R</li>
+<li><code>Plot, packges &amp; Help</code>: Xem kết quả plot, packages và help trong R</li>
 </ul></li>
 </ul>
 <p><img src="Images/p02-01-rstudio-ide.png" class="img-fluid"></p>
@@ -754,7 +757,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <span id="cb1-4"><a href="#cb1-4" aria-hidden="true" tabindex="-1"></a><span class="co">#Đối tượng là 1 vector có phân phối chuẩn</span></span>
 <span id="cb1-5"><a href="#cb1-5" aria-hidden="true" tabindex="-1"></a>y<span class="ot">&lt;-</span><span class="fu">rnorm</span>(<span class="dv">1000</span>,<span class="dv">3</span>,<span class="dv">1</span>)</span>
 <span id="cb1-6"><a href="#cb1-6" aria-hidden="true" tabindex="-1"></a><span class="co">#Đối tượng là 1 biểu đồ</span></span>
-<span id="cb1-7"><a href="#cb1-7" aria-hidden="true" tabindex="-1"></a><span class="fu">hist</span>(y, <span class="at">col=</span><span class="st">"darkblue"</span>, <span class="at">main =</span> <span class="st">"Histogram of normal distribution"</span>)</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
+<span id="cb1-7"><a href="#cb1-7" aria-hidden="true" tabindex="-1"></a><span class="fu">hist</span>(y, <span class="at">col=</span><span class="st">"lightblue"</span>, <span class="at">main =</span> <span class="st">"Histogram of normal distribution"</span>)</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output-display">
 <p><img src="p02-01-gioi-thieu-co-ban-ve-r_files/figure-html/unnamed-chunk-2-1.png" class="img-fluid" width="672"></p>
 </div>
