--- a/public/ds-book-r/p03-01-nguyen-ly-du-bao.html
+++ b/public/ds-book-r/p03-01-nguyen-ly-du-bao.html
@@ -722,6 +722,61 @@ ul.task-list li input[type="checkbox"] {
 <li>Phân tích quan hệ giao dịch của khách hàng khi mua các sản phẩm khác nhau trong siêu thị</li>
 </ul></li>
 </ul>
+<table class="table">
+<caption>Các thuật toán thường dùng trong học máy</caption>
+<colgroup>
+<col style="width: 25%">
+<col style="width: 25%">
+<col style="width: 25%">
+<col style="width: 25%">
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: left;">Supervised Learning</th>
+<th style="text-align: left;"></th>
+<th style="text-align: left;">Unsupervised Learning</th>
+<th style="text-align: left;"></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;"><strong>Hồi quy</strong> (<code>regression</code>)</td>
+<td style="text-align: left;"><strong>Phân loại</strong> (<code>classification</code>)</td>
+<td style="text-align: left;"><strong>Phân cụm</strong> (<code>clustering</code>)</td>
+<td style="text-align: left;"><strong>Các vấn đề khác</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Hồi quy đơn giản (<code>linear regression</code>)</td>
+<td style="text-align: left;">Hồi quy logistics (<code>ols</code>)</td>
+<td style="text-align: left;">Hierarchy cluster</td>
+<td style="text-align: left;">Principal Component Analysi</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">K-nearest neighbors</td>
+<td style="text-align: left;">Support Vector Machine (<code>svm</code>)</td>
+<td style="text-align: left;"><code>k-means</code></td>
+<td style="text-align: left;">Factor Analysis</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Generative additive models (<code>gam</code>)</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">Basket Analysis (<code>apriori</code>)</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Cây quyết định (<code>decision tree</code>)</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Bagging &amp; Boosting (<code>random forest</code>, <code>gbm</code>, <code>xgboost</code>, <code>lightgbm</code>)</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">^</td>
+</tr>
+</tbody>
+</table>
 </section>
 <section id="cách-bước-xây-dựng-mô-hình" class="level2" data-number="17.3">
 <h2 data-number="17.3" class="anchored" data-anchor-id="cách-bước-xây-dựng-mô-hình"><span class="header-section-number">17.3</span> Cách bước xây dựng mô hình</h2>
@@ -911,8 +966,8 @@ ul.task-list li input[type="checkbox"] {
 \begin{align}
 E(Y-\hat{Y})^2
 &amp; = E[f(X) - \hat{f}(X) - \epsilon]^2\\
-&amp; =E[(f(x) - \hat{f}(X))^2 - 2*\epsilon*(f(x) - \hat{f}(X)) + \epsilon^2)]\\
-&amp; =E[(f(x) - \hat{f}(X))^2] - \underbrace{2*E(\epsilon)}_{= 0}*E(f(x) - \hat{f}(X))) + E(\epsilon^2) \\
+&amp; =E[(f(x) - \hat{f}(X))^2 - 2\times\epsilon\times(f(x) - \hat{f}(X)) + \epsilon^2)]\\
+&amp; =E[(f(x) - \hat{f}(X))^2] - \underbrace{2\times E(\epsilon)}_{= 0}\times E(f(x) - \hat{f}(X))) + E(\epsilon^2) \\
 &amp; =E[(f(x) - \hat{f}(X))^2] + [E(\epsilon^2) - \underbrace{E(\epsilon)^2}_{=0}]\\
 &amp; = E\underbrace{[f(X) - \hat{f}(X)]^2}_{\text{reducible}} +
 \underbrace{Var(\epsilon)}_{\text{irreducible}}
